# FancyOpenCV

./: .gitattributes  README.md  asciiArt.py  detectionAndTracking.py  funFaces.py
blemishRemoval/: .gitignore  CMakeLists.txt  blemishRemoval.cpp
chromaKeying/: CMakeLists.txt  chromaKeying.cpp
data/: .gitignore
